samples/_failures_safe/1761688935_0a5bb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb07ba12.c: In function ‘main’:
./samples/SAFE/__tmp_eb07ba12.c:145:9: error: expected declaration or statement at end of input
  145 |         }
      |         ^
./samples/SAFE/__tmp_eb07ba12.c:145:9: error: expected declaration or statement at end of input
